--- a/css/main.css
+++ b/css/main.css
@@ -526,6 +526,7 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: transform 250ms;
   border-radius: 4px;
   background: var(--main-sir-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -611,7 +612,7 @@ ul {
   width: 100%;
   height: 100%;
   background-color: var(--main-one-color);
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
