--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,13 +24,14 @@
     padding: 40px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) ;
+    transition: transform 250ms;
     border-radius: 4px;
     background: var(--main-sir-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
   }
-  
+ 
 .modal-close {
     position: absolute;
     @extend %flex ; 
